data/derived/comb/progs/unify/prog2926.ml.out
Characters 21-33:
  let c1 () = failwith (10, 15, 25);;
                       ^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type string
